<?xml version="1.0"?>
<package>
  <name>multi_d435_description</name>
  <version>0.0.0</version>
  <description>The multi_d435_description package</description>

  <maintainer email="anirvan@kth.se">Anirvan Dutta</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
