<package>
  <name>multi_d435_gazebo</name>
  <version>0.1.0</version>
  <description>multi_d435_gazebo simulations</description>
  <maintainer email="anirvan@kth.se">Anirvan Dutta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>multi_d435_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
